Clean up README
Remove all mentions of libbcc