@@ -6,47 +6,66 @@ Hello eBPF
 There are [user land libraries](https://ebpf.io/what-is-ebpf/#development-toolchains) for [eBPF](https://ebpf.io) that allow you to
 write eBPF applications in C++, Rust, Go, Python and even
 Lua. But there are none for Java, which is a pity.
-So... I decided to write bindings using [Project Panama](https://openjdk.org/projects/panama/)
-and [bcc](https://github.com/iovisor/bcc), the first and widely used userland library for eBPF,
-which is typically used with its Python API.
-_Work is on the way to work on the [libbpf](https://www.kernel.org/doc/html/latest/bpf/libbpf/libbpf_overview.html)
-support in the [bpf](bpf) and [bpf-processor](bpf-processor) modules._
+So... I decided to write my own, which allows you to write
+eBPF programs directly in Java.
+
+This is still in the early stages, but you can already use it for developing small tools
+and more coming in the future.
 
 ![Overview images](img/overview.svg)
 
 _Based on the overview from [ebpf.io](https://ebpf.io/what-is-ebpf/), 
 duke image from [OpenJDK](https://wiki.openjdk.org/display/duke/Gallery)._
 
-Hello eBPF world! Hello Java world!
------------------
+Let's discover eBPF together. Join me on the journey and learn a lot about eBPF and Java along the way.
 
-Let's discover eBPF together. Join me on the journey to write
-all examples from the [Learning eBPF book](https://cilium.isovalent.com/hubfs/Learning-eBPF%20-%20Full%20book.pdf)
-(get it also from [Bookshop.org](https://bookshop.org/p/books/learning-ebpf-programming-the-linux-kernel-for-enhanced-observability-networking-and-security-liz-rice/19244244?ean=9781098135126),
-[Amazon](https://www.amazon.com/Learning-eBPF-Programming-Observability-Networking/dp/1098135121), or [O'Reilly](https://www.oreilly.com/library/view/learning-ebpf/9781098135119/)), by
-Liz Rice in Java, implementing a Java userland library for eBPF along the way,
-with a [blog series](https://mostlynerdless.de/blog/tag/hello-ebpf/) to document the journey.
+Example
+-------
+Consider for a brief moment that you want to test how your server application behaves when every third incoming
+network packet is dropped. We can write a simple eBPF program to do this:
 
-This project is still in its early stages, and a read-along of the book is recommended:
+```java
+@BPF(license = "GPL")
+public abstract class XDPDropEveryThirdPacket extends BPFProgram implements XDPHook {
 
-__We're currently at page 23 of the book in the [blog series](https://mostlynerdless.de/blog/tag/hello-ebpf/)
-and page 36 with this repo.__
+  final GlobalVariable<@Unsigned Integer> count = new GlobalVariable<>(0);
 
-It is evolving fast, you can already implement all examples and exercises from chapter 2.
+  @BPFFunction
+  public boolean shouldDrop() {
+    return count.get() % 3 == 1;
+  }
 
-A sample project using the library can be found in the [sample-bcc-project](https://github.com/parttimenerd/sample-bcc-project)
-repository.
+  @Override // runs directly in the kernel on every incoming packet
+  public xdp_action xdpHandlePacket(Ptr<xdp_md> ctx) {
+    // this code is actually compiled to the C code that is executed in the kernel
+    count.set(count.get() + 1);
+    return shouldDrop() ? xdp_action.XDP_DROP : xdp_action.XDP_PASS;
+  }
+
+  // runs in user land
+  public static void main(String[] args) throws InterruptedException {
+    try (XDPDropEveryThirdPacket program = BPFProgram.load(XDPDropEveryThirdPacket.class)) {
+      // attach the xdpHandlePacket method to the network interface
+      program.xdpAttach(XDPUtil.getNetworkInterfaceIndex());
+      // print the current packet count in a loop
+      while (true) {
+        System.out.println("Packet count " + program.count.get());
+        Thread.sleep(1000);
+      }
+    }
+  }
+}
+```
+
+You can find this example as [XDPDropEveryThirdPacket.java](bpf-samples/src/main/java/me/bechberger/ebpf/samples/XDPDropEveryThirdPacket.java).
 
 Goals
 -----
 Provide a library (and documentation) for Java developers to explore eBPF and
-write their own eBPF programs, and the [examples](https://github.com/lizrice/learning-ebpf) from the [book](https://cilium.isovalent.com/hubfs/Learning-eBPF%20-%20Full%20book.pdf) without having to Python.
+write their own eBPF programs, like firewalls, directly in Java, using the [libbpf](https://libbpf.readthedocs.io/en/latest/)
+under the hood.
 
-The initial goal is to be as close to bcc Python API as possible so that the examples from the book
-can be ported to Java easily.
-
-You can find the Java versions of the examples in the [bcc/src/main/me/bechberger/samples](bcc/src/main/me/bechberger/samples)
-and the API in the [bcc/src/main/me/bechberger/bcc](bcc/src/main/me/bechberger/bcc) directory.
+The goal is neither to replace existing eBPF libraries nor to provide a higher abstractions.
 
 Prerequisites
 -------------
@@ -57,10 +76,11 @@ Either a Linux machine with the following:
 
 - Linux 64-bit (or a VM)
 - Java 22 or later
-- libbcc (see [bcc installation instructions](https://github.com/iovisor/bcc/blob/master/INSTALL.md), be sure to install the libbpfcc-dev package)
-  - e.g. `apt install linux-tools-common linux-tools-$(uname -r)` on Ubuntu
-- root privileges (for eBPF programs)
-On Mac OS, you can use the [Lima VM](https://lima-vm.io/) (or use the `hello-ebpf.yaml` file as a guide to install the prerequisites):
+- libbpf and bpf-tool
+  - e.g. `apt install libbpf-dev linux-tools-common linux-tools-$(uname -r)` on Ubuntu
+- root privileges (for executing the eBPF programs)
+
+- On Mac OS, you can use the [Lima VM](https://lima-vm.io/) (or use the `hello-ebpf.yaml` file as a guide to install the prerequisites):
 
 ```sh
 limactl start hello-ebpf.yaml --mount-writable
@@ -84,81 +104,39 @@ Running the examples
 Be sure to run the following in a shell with root privileges that uses JDK 22:
 
 ```shell
-java -cp bcc/target/bcc.jar --enable-native-access=ALL-UNNAMED me.bechberger.ebpf.samples.EXAMPLE_NAME
-# or in the project directory
+# in the project directory
 ./run.sh EXAMPLE_NAME
 
 # list all examples
 ./run.sh
 ```
 
-The following runs the hello world sample from the vcc repository. It currently prints something like:
+This allows you to easily run the example from above:
 
 ```
-> ./run.sh bcc.HelloWorld
-           <...>-30325   [042] ...21 10571.161861: bpf_trace_printk: Hello, World!
-             zsh-30325   [004] ...21 10571.164091: bpf_trace_printk: Hello, World!
-             zsh-30325   [115] ...21 10571.166249: bpf_trace_printk: Hello, World!
-             zsh-39907   [127] ...21 10571.167210: bpf_trace_printk: Hello, World!
-             zsh-30325   [115] ...21 10572.231333: bpf_trace_printk: Hello, World!
-             zsh-30325   [060] ...21 10572.233574: bpf_trace_printk: Hello, World!
-             zsh-30325   [099] ...21 10572.235698: bpf_trace_printk: Hello, World!
-             zsh-39911   [100] ...21 10572.236664: bpf_trace_printk: Hello, World!
- MediaSu~isor #3-19365   [064] ...21 10573.417254: bpf_trace_printk: Hello, World!
- MediaSu~isor #3-22497   [000] ...21 10573.417254: bpf_trace_printk: Hello, World!
- MediaPD~oder #1-39914   [083] ...21 10573.418197: bpf_trace_printk: Hello, World!
- MediaSu~isor #3-39913   [116] ...21 10573.418249: bpf_trace_printk: Hello, World!
-```
-
-The related code is ([chapter2/HelloWorld.java](bcc/src/main/java/me/bechberger/ebpf/samples/chapter2/HelloWorld.java)):
-
-```java
-public class HelloWorld {
-  public static void main(String[] args) {
-    try (BPF b = BPF.builder("""
-            int hello(void *ctx) {
-               bpf_trace_printk("Hello, World!");
-               return 0;
-            }
-            """).build()) {
-      var syscall = b.get_syscall_fnname("execve");
-      b.attach_kprobe(syscall, "hello");
-      b.trace_print();
-    }
-  }
-}
-```
-
-Which is equivalent to the Python [code](pysamples/chapter2/hello.py) and prints "Hello, World!" for each `execve` syscall:
-
-```python
-from bcc import BPF
-
-program = r"""
-int hello(void *ctx) {
-    bpf_trace_printk("Hello World!");
-    return 0;
-}
-"""
-
-b = BPF(text=program)
-syscall = b.get_syscall_fnname("execve")
-b.attach_kprobe(event=syscall, fn_name="hello")
-
-b.trace_print()
+> ./build.sh
+>  ./run.sh XDPDropEveryThirdPacket
+Packet count 0
+Packet count 2
+Packet count 3
+Packet count 5
+Packet count 6
+Packet count 8
+Packet count 9
+Packet count 11
 ```
 
 You can use the `debug.sh` to run an example with a debugger port open at port 5005.
 
 Usage as a library
 ------------------
-The library is available as a Maven package:
+The library is available as a maven package:
 
 ```xml
 <dependency>
     <groupId>me.bechberger</groupId>
-    <artifactId>bcc</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <artifactId>bpf</artifactId>
+    <version>0.1.1-SNAPSHOT</version>
 </dependency>
 ```
 
@@ -194,66 +172,35 @@ Posts covering the development of this project:
 - Apr 09, 2024: [Hello eBPF: Generating C Code (8)](https://mostlynerdless.de/blog/2024/04/09/hello-ebpf-generating-c-code-8/)
 - Apr 22, 2024: [Hello eBPF: XDP-based Packet Filter (9)](https://mostlynerdless.de/blog/2024/04/22/hello-ebpf-xdp-based-packet-filter-9/)
 - May 21, 2024: [Hello eBPF: Global Variables (10)](https://mostlynerdless.de/blog/2024/05/21/hello-ebpf-global-variables-10/)
+- Jul 02, 2024: [Hello eBPF: BPF Type Format and 13 Thousand Generated Java Classes (11)](https://mostlynerdless.de/blog/2024/07/02/hello-ebpf-bpf-type-format-and-13-thousand-generated-java-classes-11/)
 
 Examples
 --------
 
-We implement the Java API alongside implementing the examples from the book, so we track the progress
-of the implementation by the examples we have implemented. We also use examples from different sources
-like the bcc repository and state this in the first column.
+There are a few examples
 
-
-| Chapter<br/>/Source | Example                                                        | Java class                                                                                     | Status | Description                                                                            |
-|---------------------|----------------------------------------------------------------|------------------------------------------------------------------------------------------------|--------|----------------------------------------------------------------------------------------|
-| bcc                 | [bcc/hello_world.py](pysamples/bcc/hello_world.py)             | [HelloWorld](bcc/src/main/java/me/bechberger/ebpf/samples/bcc/HelloWorld.java)                 | works  | Basic hello world                                                                      |
-| 2                   | [chapter2/hello.py](pysamples/chapter2/hello.py)               | [chapter2.HelloWorld](bcc/src/main/java/me/bechberger/ebpf/samples/chapter2/HelloWorld.java)   | works  | print "Hello World!" for each `execve` syscall                                         |
-| 2                   | [chapter2/hello-map.py](pysamples/chapter2/hello-map.py)       | [chapter2.HelloMap](bcc/src/main/java/me/bechberger/ebpf/samples/chapter2/HelloMap.java)       | works  | Count and print `execve` calls per user                                                |
-| own                 | -                                                              | [own.HelloStructMap](bcc/src/main/java/me/bechberger/ebpf/samples/own/HelloStructMap.java)     | works  | Count and print `execve` calls per user and store the result as a struct in a map      |
-| 2                   | [chapter2/hello-buffer.py](pysamples/chapter2/hello-buffer.py) | [chapter2.HelloBuffer](bcc/src/main/java/me/bechberger/ebpf/samples/chapter2/HelloBuffer.java) | works  | Record information in perf buffer                                                      |
-| 2                   | [chapter2/hello-tail.py](pysamples/chapter2/hello-tail.py)     | [chapter2.HelloTail](bcc/src/main/java/me/bechberger/ebpf/samples/chapter2/HelloTail.java)     | works  | Print a message when a syscall is called, and also when a timer is created or deleted. |
-| 2                   | -                                                              | [chapter2.ex](bcc/src/main/java/me/bechberger/ebpf/samples/chapter2/ex)                        | works  | Implementation of some of the exercises for chapter 2                                  |
-| own                 | [own/disassembler-test.py](pysamples/own/disassembler-test.py) | [own.DisassemblerTest](bcc/src/main/java/me/bechberger/ebpf/samples/own/DisassemblerTest.java) | works  | Disassemble byte-code for the HelloMap example                                         |
-
-
-BPF Examples
-------------
-The examples from the book and other sources like [Ansil H's blog posts](https://ansilh.com/tags/ebpf/)
-are implemented in the [bpf/src/main/me/bechberger/ebpf/samples](bpf/src/main/java/me/bechberger/ebpf/samples) directory.
-You can run them using the `./run_bpf.sh` script. All examples have accompanying tests in the 
-[bpf/src/test](bpf/src/test) directory.
-
-| Source   | Java Class                                                                                     | Description                                           |
-|----------|------------------------------------------------------------------------------------------------|-------------------------------------------------------|
-| Ansil H  | [HelloWorld](bpf/src/main/java/me/bechberger/ebpf/samples/Helloworld.java)                     | A simple hello world example                          |
-| Ansil H  | [RingSample](bpf/src/main/java/me/bechberger/ebpf/samples/RingSample.java)                     | Record openat calls in a ring buffer                  |
-|          | [TypeProcessingSample](bpf/src/main/java/me/bechberger/ebpf/samples/TypeProcessingSample.java) | RingSample using the @Type annotation                 |
-|          | [HashMapSample](bpf/src/main/java/me/bechberger/ebpf/samples/HashMapSample.java)               | Record openat calls in a hash map                     |
-|          | [TypeProcessingSample](bpf/src/main/java/me/bechberger/ebpf/samples/TypeProcessingSample.java) | RingSample using more code generation                 |
-| sematext | [XDPPacketFilter](bpf/src/main/java/me/bechberger/ebpf/samples/XDPPacketFilter.java)           | Use XDP to block incoming packages from specific URLs |
-
-Classes and Methods
--------
-All classes and methods have the name as in the Python API, introducing things like builders only
-for more complex cases (like the constructor of `BPF`).
-
-The comments for all of these entities are copied from the Python API and extended where necessary.
+| Inspiration | Java Class                                                                                     | Description                                           |
+|-------------|------------------------------------------------------------------------------------------------|-------------------------------------------------------|
+| Ansil H     | [HelloWorld](bpf/src/main/java/me/bechberger/ebpf/samples/Helloworld.java)                     | A simple hello world example                          |
+| Ansil H     | [RingSample](bpf/src/main/java/me/bechberger/ebpf/samples/RingSample.java)                     | Record openat calls in a ring buffer                  |
+|             | [TypeProcessingSample](bpf/src/main/java/me/bechberger/ebpf/samples/TypeProcessingSample.java) | RingSample using the @Type annotation                 |
+|             | [HashMapSample](bpf/src/main/java/me/bechberger/ebpf/samples/HashMapSample.java)               | Record openat calls in a hash map                     |
+|             | [TypeProcessingSample](bpf/src/main/java/me/bechberger/ebpf/samples/TypeProcessingSample.java) | RingSample using more code generation                 |
+| sematext    | [XDPPacketFilter](bpf/src/main/java/me/bechberger/ebpf/samples/XDPPacketFilter.java)           | Use XDP to block incoming packages from specific URLs |
 
 Plans
 -----
 
-A look ahead into the future so you know what to expect:
+A look ahead into the future, so you know what to expect:
 
-- Implement more features related to libbpf
+- Implement more features related to libbpf and eBPF
   - cgroups support
-- Allow writing eBPF programs in Java
+  - sched-ext support (coming soon)
+- Make eBPF programs more composable
+- More documentation
 
 These plans might change, but I'll try to keep this up to date.
 I'm open to suggestions, contributions, and ideas.
-
-Other modules
--------------
-- [rawbpf](rawbpf/README.md): The raw libbpf bindings
-
 
 Testing
 -------
